Putting some hold while execution of the code

--- a/reports/index.html
+++ b/reports/index.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary">Web Automation Results</span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">May 12, 2024 08:16:32 am</span></a>
+<a href="#"><span class="badge badge-primary">May 30, 2024 06:40:08 pm</span></a>
 </li>
 </ul>
 </div>
@@ -81,7 +81,7 @@
           <div class="test-detail">
             <p class="name">submitorder</p>
             <p class="text-sm">
-              <span>8:16:33 am</span> / <span>00:00:12:374</span>
+              <span>6:40:09 pm</span> / <span>00:00:13:211</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -90,9 +90,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">submitorder</h5>
-<span class='badge badge-success'>05.12.2024 8:16:33 am</span>
-<span class='badge badge-danger'>05.12.2024 8:16:45 am</span>
-<span class='badge badge-default'>00:00:12:374</span>
+<span class='badge badge-success'>05.30.2024 6:40:09 pm</span>
+<span class='badge badge-danger'>05.30.2024 6:40:22 pm</span>
+<span class='badge badge-default'>00:00:13:211</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -105,7 +105,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>8:16:45 am</td>
+        <td>6:40:22 pm</td>
         <td>
           Test Passed
         </td>
@@ -122,7 +122,7 @@
           <div class="test-detail">
             <p class="name">submitorder</p>
             <p class="text-sm">
-              <span>8:16:45 am</span> / <span>00:00:11:354</span>
+              <span>6:40:22 pm</span> / <span>00:00:00:000</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -131,30 +131,16 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">submitorder</h5>
-<span class='badge badge-success'>05.12.2024 8:16:45 am</span>
-<span class='badge badge-danger'>05.12.2024 8:16:56 am</span>
-<span class='badge badge-default'>00:00:11:354</span>
+<span class='badge badge-success'>05.30.2024 6:40:22 pm</span>
+<span class='badge badge-danger'>05.30.2024 6:40:22 pm</span>
+<span class='badge badge-default'>00:00:00:000</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=2</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
 <span title='Expand all nodes' class='badge badge-default pointer float-right et'><i class="fa fa-expand"></i></span>
 </div>
 </div>
-</div><div class="detail-body mt-4">
-<table class="table table-sm">
-  <thead><tr><th class="status-col">Status</th><th class="timestamp-col">Timestamp</th><th class="details-col">Details</th></tr></thead>
-  <tbody>
-      <tr class="event-row">
-        <td><span class="badge log pass-bg">Pass</span></td>
-        <td>8:16:56 am</td>
-        <td>
-          Test Passed
-        </td>
-      </tr>
-  </tbody>
-</table>
-</div>
-          </div>
+</div>          </div>
         </li>
       </ul>
     </div>
@@ -170,13 +156,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>May 12, 2024 08:16:32 am</h3>
+<h3>May 30, 2024 06:40:08 pm</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>May 12, 2024 08:16:56 am</h3>
+<h3>May 30, 2024 06:40:22 pm</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -227,7 +213,7 @@
 </div>
 </div>
 <div class="card-footer">
-<div><small data-tooltip='100%'><b>2</b> events passed</small></div>
+<div><small data-tooltip='100%'><b>1</b> events passed</small></div>
 <div>
 <small data-tooltip='0%'><b>0</b> events failed,
 <b data-tooltip='%'>0</b> others
@@ -246,7 +232,7 @@
 </div></div>
 <script>
 var timeline = {
-"submitorder":12.374,"submitorder":11.354
+"submitorder":13.211,"submitorder":0
 };
 </script>
 <div class="row">
@@ -286,7 +272,7 @@ warningGrandChild: 0,
 skipGrandChild: 0,
 infoGrandChild: 0,
 eventsCount: 5,
-passEvents: 2,
+passEvents: 1,
 failEvents: 0,
 warningEvents: 0,
 skipEvents: 0,
